# eqx_metrics

./: README.md  pyproject.toml
jax_metrics/metrics/: accuracy.py  losses.py  metric.py  metrics.py  reduce.py
jax_metrics/regularizers/: l1l2.py
scripts/: update_docs.py
tests/losses/: cosine_similarity_test.py  huber_test.py  loss_test.py  mean_absolute_percentage_error_test.py  mean_squared_logarithmic_error_test.py
tests/metrics/: test_mean_absolute_error.py  test_mean_square_error.py  test_metric.py
