[project]
name = "jax_metrics"
version = "0.2.5"
description = ""
authors = [
    {name = "Cristian Garcia", email = "cgarcia.e88@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
#requires-python = ">=3.8,<3.12"
dependencies = [
    "einops>=0.4.0",
    "simple_pytree>=0.1.3",
    "optax>=0.1.1",
    "jax",
    "jaxlib",
]

[project.urls]
Repository = "https://github.com/cgarciae/jax_metrics"
Homepage = "https://cgarciae.github.io/jax_metrics"

[dependency-groups]
test = [
    "pytest>=7.0.1",
    "pytest-cov>=3.0.0",
    "hypothesis>=6.37.1",
    "einops>=0.4.0",
    "scipy!=1.10.1",
]
docs = [
    "mkdocs>=1.2.3",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-material>=8.2.1",
    "mkdocs-jupyter>=0.20.0",
]
dev = [
    "pre-commit>=2.17.0",
    "typer>=0.4.0",
    "black==23.1.0",
    "isort==5.12.0",
    "ruff>=0.0.252",
]

[tool.ruff]
line-length = 110

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

